k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devsecops
  name: devsecops-app
spec:
  selector:
    app: devsecops-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
