k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsecops-app
  namespace: devsecops
spec:
  podSelector:
    matchLabels:
      app: devsecops-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 5000
  egress: []
